--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
       "<rootDir>"
     ],
     "moduleDirectories": [
-      "src","node_modules"
+      "src",
+      "node_modules"
     ],
     "roots": [
       "<rootDir>"
