--- a/package.json
+++ b/package.json
@@ -26,17 +26,20 @@
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.0.9",
+    "@nestjs/swagger": "^4.5.12",
     "@nestjs/websockets": "^7.0.9",
     "@types/redis": "^2.8.18",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "mongoose": "^5.9.10",
+    "mongoose-sequence": "^5.2.2",
     "nestjs-redis": "^1.2.7",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
