--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch ",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/platform-socket.io": "^7.0.9",
@@ -30,6 +31,7 @@
     "@types/redis": "^2.8.18",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "nestjs-easyconfig": "^2.0.5",
     "nestjs-redis": "^1.2.7",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
