--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,19 @@
-version: "3"
+version: '3'
 services:
   redis:
     image: redis:latest
     container_name: redis-local
     ports:
-      - "6379:6379"
+      - '6379:6379'
+    networks:
+      - backend
+  redis-gui:
+    image: redislabs/redisinsight
+    ports:
+      - '8001:8001'
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: 'bridge'
