--- a/package.json
+++ b/package.json
@@ -21,40 +21,41 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
+    "@nestjs/common": "^7.6.4",
     "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/platform-socket.io": "^7.0.9",
-    "@nestjs/swagger": "^4.5.12",
-    "@nestjs/websockets": "^7.0.9",
-    "@types/redis": "^2.8.18",
+    "@nestjs/core": "^7.6.4",
+    "@nestjs/platform-express": "^7.6.4",
+    "@nestjs/platform-socket.io": "^7.6.4",
+    "@nestjs/serve-static": "^2.1.4",
+    "@nestjs/swagger": "^4.7.8",
+    "@nestjs/websockets": "^7.6.4",
+    "@types/redis": "^2.8.28",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
-    "nestjs-easyconfig": "^2.0.5",
+    "nestjs-easyconfig": "^2.2.2",
     "nestjs-redis": "^1.2.7",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "socket.io-client": "^2.3.0",
-    "swagger-ui-express": "^4.1.4"
+    "socket.io-client": "^2.3.1",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.1.0",
-    "@types/express": "^4.17.3",
+    "@nestjs/cli": "^7.5.4",
+    "@nestjs/schematics": "^7.2.5",
+    "@nestjs/testing": "^7.6.4",
+    "@types/express": "^4.17.9",
     "@types/jest": "25.1.4",
-    "@types/node": "^13.9.1",
-    "@types/socket.io": "^2.1.4",
-    "@types/socket.io-client": "^1.4.32",
+    "@types/node": "^13.13.38",
+    "@types/socket.io": "^2.1.12",
+    "@types/socket.io-client": "^1.4.34",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
