--- a/admin/front-end/package.json
+++ b/admin/front-end/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "highcharts": "^8.2.2",
+    "highcharts-vue": "^1.3.5",
     "socket.io-client": "^3.0.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
