--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch ",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "NODE_ENV=production nest start",
+    "start:dev": "NODE_ENV=development nest start --watch ",
+    "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,9 +29,11 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/websockets": "^7.6.4",
+    "@types/dotenv-flow": "^3.1.0",
     "@types/redis": "^2.8.28",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "dotenv-flow": "^3.2.0",
     "nestjs-easyconfig": "^2.2.2",
     "nestjs-redis": "^1.2.7",
     "redis": "^3.0.2",
