--- a/admin/front-end/package.json
+++ b/admin/front-end/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@formschema/native": "^2.0.0-alpha.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "highcharts": "^8.2.2",
