--- a/admin/front-end/package.json
+++ b/admin/front-end/package.json
@@ -9,16 +9,17 @@
   },
   "dependencies": {
     "@formschema/native": "^2.0.0-alpha.2",
+    "@types/socket.io": "^2.1.13",
+    "@types/socket.io-client": "^1.4.35",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
-    "socket.io-client": "^3.0.5",
+    "socket.io-client": "^2.3.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vue-socket.io": "^3.0.10",
     "vuetify": "^2.4.2",
     "vuex": "^3.4.0"
   },
